--- a/flask/app/templates/appearance.html
+++ b/flask/app/templates/appearance.html
@@ -21,13 +21,13 @@
 
     <div class="action-btn" id="light-theme-btn">
         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
-        <span class="btn-text">Light theme</span>
+        <span class="btn-text" id="lgt-thm">Light theme</span>
         <button class="check-btn" aria-label="Select Light theme"></button>
     </div>
 
     <div class="action-btn" id="dark-theme-btn">
         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
-        <span class="btn-text">Dark theme</span>
+        <span class="btn-text" id="drk-thm">Dark theme</span>
         <button class="check-btn" aria-label="Select Dark theme"></button>
     </div>
 </body>
@@ -66,4 +66,25 @@
   
     lightBtn.addEventListener('click', applyLightMode);
     darkBtn.addEventListener('click', applyDarkMode);
+
+    const translations = {
+        en: {
+            title: "Appearance",
+            light: "Light theme",
+            dark: "Dark theme"
+        },
+        th: {
+            title: "ลักษณะธีม",
+            light: "รูปแบบสว่าง",
+            dark: "รูปแบบมืด"
+        }
+    };
+
+    function changeLanguage(lang) {
+        document.querySelector('#choose-language').textContent = (translations[lang].title);
+        document.querySelector('#lgt-thm').textContent = (translations[lang].light);
+        document.querySelector('#drk-thm').textContent = (translations[lang].dark);
+    }
+
+    changeLanguage(localStorage.getItem('lang'))
   </script>
