--- a/flask/app/templates/setting.html
+++ b/flask/app/templates/setting.html
@@ -54,7 +54,7 @@
 
         <div class="action-btn" id="lang" onclick="urlFor('appearance')">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M453-452q51 51 114 87.5T702-308q-40 51-98 79.5T481-200q-117 0-198.5-81.5T201-480q0-65 28.5-123t79.5-98q20 72 56.5 135T453-452Zm290 72q-20-5-39.5-11T665-405q8-18 11.5-36.5T680-480q0-83-58.5-141.5T480-680q-20 0-38.5 3.5T405-665q-8-19-13.5-38T381-742q24-9 49-13.5t51-4.5q117 0 198.5 81.5T761-480q0 26-4.5 51T743-380ZM440-840v-120h80v120h-80Zm0 840v-120h80V0h-80Zm323-706-57-57 85-84 57 56-85 85ZM169-113l-57-56 85-85 57 57-85 84Zm671-327v-80h120v80H840ZM0-440v-80h120v80H0Zm791 328-85-85 57-57 84 85-56 57ZM197-706l-84-85 56-57 85 85-57 57Z"/></svg>
-            <span id="languages">Appearance</span>
+            <span id="appearance">Appearance</span>
         </div>
 
         <div class="action-btn" id="logout-bar" onclick="confirmAction()">
@@ -79,12 +79,14 @@
             settings: "Settings",
             greeting: "Hi!",
             languages: "Languages",
+            appearance: "Appearance",
             logout: "Logout"
         },
         th: {
             settings: "ตั้งค่า",
             greeting: "สวัสดี",
             languages: "ภาษา",
+            appearance: "ลักษณะธีม",
             logout: "ออกจากระบบ"
         }
     };
@@ -93,6 +95,7 @@
         document.querySelector('#settings').textContent = (translations[lang].settings);
         document.querySelector('#greeting').textContent = (translations[lang].greeting);
         document.querySelector('#languages').textContent = (translations[lang].languages);
+        document.querySelector('#appearance').textContent = (translations[lang].appearance);
         document.querySelector('#logout-text').textContent = (translations[lang].logout);
     }
     if (localStorage.getItem('lang') === null) {
