--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -132,7 +132,7 @@
                         </span>
                         <div class="button-group">
                             <button class="quick-btn withdraw-btn withdraw" onclick="location.href='/withdraw?itemID={{ it.itemID }}'">Withdraw</button>
-                            {% if current_user.IsM_admin %}
+                            {% if (current_user.is_admin or current_user.is_sadmin) %}
                             <button class="quick-btn edit-btn edit" onclick="location.href='/edit?itemID={{ it.itemID }}'">Edit</button>
                             {% endif %}
                         </div>
@@ -161,7 +161,7 @@
         </a>
 
         <div class="nav-item">
-            {% if current_user.IsM_admin %}
+            {% if (current_user.is_admin or current_user.is_sadmin) %}
                 <a href="{{ url_for('adminlist') }}">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
                         <path d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Z"/>
@@ -290,7 +290,7 @@
     
     changeLanguage(localStorage.getItem('lang'));
 
-    {% if current_user.IsM_admin %}
+    {% if (current_user.is_admin or current_user.is_sadmin) %}
         document.querySelector('#manageAdmin').textContent = (translations[localStorage.getItem('lang')].manageAdmin);
     {% else %}
         document.querySelector('#contactAdmin').textContent = (translations[localStorage.getItem('lang')].contactAdmin);
