history not finish yet

--- a/flask/app/static/css/setting.css
+++ b/flask/app/static/css/setting.css
@@ -14,7 +14,7 @@
     --base--color: #212121;
     --text--color: #FFF;
     --text2--color: #bbb;
-    --border--color: #eee;
+    --border--color: #bbb;
     --box--color: #121212;
     --box2--color: #004d40;
     --boxhover--color: #6993f5;
