--- a/flask/app/static/css/history.css
+++ b/flask/app/static/css/history.css
@@ -53,6 +53,43 @@ body{
     color: var(--text--color);
 }
 
+.profile-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+.profile-wrapper {
+    align-items: center;
+    display: flex;
+    gap: 12px;
+}
+
+.profile-circle {
+    background-color: var(--base--color);
+    border-radius: 50%;
+    flex-shrink: 0;
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+.user-icon {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: var(--buttonbg--color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: #f5f5f5;
+    font-weight: bold;
+}
+
 .item{
     display: flex;
     align-items: center;
