--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -183,7 +183,7 @@ svg {
 
 
 .alert-box { border-radius: 10px; margin: 10px; background-color: rgb(0, 155, 8); }
-.message { border-radius: 0.25rem; margin-bottom: 1rem; padding: 1rem; position: relative; font-size: 1rem; line-height: 1.5; color: var(--text3--color); }
+.message { border-radius: 0.25rem; margin-bottom: 1rem; padding: 1rem; position: relative; font-size: 1rem; line-height: 1.5; color: #fff; }
 
 .notification-badge {
   background: red;
